// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Should be disabled 1`] = `
<body>
  <div>
    <button
      class="sc-bczRLJ dzVVNB buttonComp"
      data-testid="buttonComp"
      disabled=""
    >
      Test
    </button>
  </div>
</body>
`;

exports[`Button component Should render blue color 1`] = `
<body>
  <div>
    <button
      class="sc-bczRLJ kFWJKC buttonComp"
      color="blue"
      data-testid="buttonComp"
    >
      Test
    </button>
  </div>
</body>
`;

exports[`Button component Should render correctly 1`] = `
<body>
  <div>
    <button
      class="sc-bczRLJ Timyr buttonComp"
      data-testid="buttonComp"
    >
      Button test
    </button>
  </div>
</body>
`;

exports[`Button component Should show linear progress 1`] = `
<body>
  <div>
    <button
      class="sc-bczRLJ dzVVNB buttonComp"
      data-testid="buttonComp"
      disabled=""
    >
      <span
        class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate linear-progress css-eglki6-MuiLinearProgress-root"
        role="progressbar"
      >
        <span
          class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate css-5ir5xx-MuiLinearProgress-bar1"
        />
        <span
          class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar2Indeterminate css-1r8wrcl-MuiLinearProgress-bar2"
        />
      </span>
      Test
    </button>
  </div>
</body>
`;
